tests/NormalTests/paczka1/fuzzy1/62298850.err
Error in line 4: aqu54d A337 29,4
Error in line 21: zac1fzB A337 36,6
Error in line 26: zac1fzB A441 65,1
